--- a/minimal_api/appsettings.json
+++ b/minimal_api/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "mysql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=password;"
-  }
+    "MySql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=password;"
+  },
+  "Jwt": {
+        "SecretKey": "MinhaChaveSecretaMuitoSegura123!",
+        "Issuer": "SeuIssuerAqui",
+        "Audience": "SeuAudienceAqui"
+    }
 }
