test:Testes de persistência

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -18,4 +18,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Api\minimal_api.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
